@@ -7,6 +7,7 @@ Fixed:
 - format2: failure to skip escaped char in "%(echo foo\ bar)" was corrected
 Enhancements:
 - format2: add the %(exec) function
+- format2: add the %(shell) function
 Changes:
 - format1: removed older formatter in favor of format2
 - format2: add check for empty key
